samples/_failures_safe/1761266793_4f09ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_301dffab.c: In function ‘main’:
./samples/SAFE/__tmp_301dffab.c:180:5: error: expected ‘{’ at end of input
  180 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_301dffab.c:180:5: error: expected declaration or statement at end of input
